# 3DimensionalDynamo

./: .gitmodules  CMakeLists.txt  README.md
docs/: ChangeLog
driver/: CMakeLists.txt  indices_mod.F90  inputdata_mod.F90  main.F90  outputdata_mod.F90
source/: CMakeLists.txt  alloc_module.F90  c_fortran_dgssv.c  calculate_terms_module.F90  cons_module.F90  dynamo_interface_mod.F90  fieldline_module.F90  grid_module.F90  init_module.F90  mpi_module.F90  params_module.F90  prec.F90  solver_module.F90  stencil_module.F90  util_module.F90
